# Antigravity-Agentic-Game

./: AGENTS.md  CRITICAL_FIXES_ROUND_2.md  DEBUG_UI_STATS.md  FINAL_FIXES.md  FINAL_FIX_ROOT_CAUSE.md  README.md  RESPONSIVENESS_AND_HIGHSCORE_FIXED.md
docs/: AI_BEHAVIOR_SPECS.md  API_CONTRACTS.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  GAMEPLAY_LOOP.md  JSON_SCHEMAS.md  PRD.md  PROMPT_SPECS.md  QUICK_REF.md  SOLO_DEV_PLAN.md  TRACE_FORMAT.md  UI_SPECS.md
mobile-game-server/: .gitignore  config.py  debug_schema.py  exceptions.py  main.py  pyproject.toml  test_gemini_direct.py  test_level_gen.py
mobile-game-server/agents/: __init__.py  base_agent.py  dungeon_master.py  level_generator.py  narrative_agent.py  referee_agent.py  rival_agent.py
mobile-game-server/fallbacks/: fallback_levels.py
mobile-game-server/models/: game_schemas.py  requests.py  responses.py
mobile-game-server/routers/: agents.py  health.py  players.py  traces.py
mobile-game-server/scratch/: test_gemini.py
mobile-game-server/services/: firebase_service.py  redis_service.py
mobile-game-server/utils/: schema_converter.py
mobile_game/: README.md  firebase.json  pubspec.yaml
mobile_game/android/app/: build.gradle.kts  google-services.json
mobile_game/ios/Runner/: Info.plist
mobile_game/ios/Runner.xcodeproj/: project.pbxproj
mobile_game/lib/: firebase_options.dart  main.dart
mobile_game/lib/app/: router.dart  theme.dart
mobile_game/lib/models/: action_result.dart  (+5 more)
mobile_game/linux/: CMakeLists.txt
mobile_game/test/: widget_test.dart
mobile_game/web/: index.html
(+35 files in other folders)
