[project]
name = "mobile-game-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "firebase-admin>=7.4.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.1",
    "redis>=7.4.0",
    "uvicorn>=0.47.0",
]
